# airplay-esp32

./: .gitguardian.yml  .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.bt  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esparagus-audio-brick  sdkconfig.defaults.squeezeamp  sdkconfig.defaults.wrover  sdkconfig.user.lilygo-eth-lite-poe  user_platformio.ini
.githooks/: pre-commit
.github/workflows/: ci-release.yml
components/board_utils/: board_utils.c
components/boards/: CMakeLists.txt  Kconfig.projbuild  board_common.c  board_common.h  partitions-4m.csv
components/boards/esparagus-audio-brick/: board.c
components/boards/squeezeamp/: board.c
components/dac_tas57xx/: CMakeLists.txt  Kconfig  dac_tas57xx.c
components/dac_tas57xx/hybridflows/: convert_cfg.py  tt_hf1.cfg  tt_hf1.h  tt_hf6.cfg  tt_hf6.h
components/dac_tas58xx/: CMakeLists.txt  Kconfig  dac_tas58xx.c
components/display/: CMakeLists.txt  README.md  background.c  background.h  display.c  display_st7789.c  idf_component.yml  make_background.py
components/u8g2-hal-esp-idf/include/: u8g2_esp32_hal.h
components/u8g2-hal-esp-idf/src/: u8g2_esp32_hal.c
data/www/: eq.html  index.html  logs.html
docs/: DISPLAY_NOTES.md
main/: CMakeLists.txt  Kconfig.projbuild  buttons.c  dacp_client.c  idf_component.yml  main.c  playback_control.c  settings.c  settings.h
main/audio/: a2dp_sink.c  a2dp_sink.h  audio_buffer.c  audio_buffer.h  audio_output.c  audio_output.h  audio_output_spdif.c  audio_output_usb.c  audio_receiver.c  audio_receiver.h  audio_receiver_internal.h  audio_stream_buffered.c  audio_stream_realtime.c  audio_timing.c  audio_timing.h
main/network/: dns_server.c  ethernet.c  log_stream.c  mdns_airplay.c  ntp_clock.c  ota.c  ptp_clock.c  web_server.c  wifi.c
main/rtsp/: rtsp_conn.c  rtsp_handlers.c  rtsp_rsa.c  rtsp_server.c
scripts/: format.sh  lint.sh  make_background.py
